<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/icon_awards"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_award"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_enter_email"
            android:textAlignment="center"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_email_address"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="30"
            android:background="@drawable/shape_kotak"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_button"/>
    </LinearLayout>

</LinearLayout>