<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="Filter"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"/>
        <TextView
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="x"
            android:gravity="right |center"
            android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_filter"
        android:layout_below="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center |left"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/poin_awards_area"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/shape_blue_link">

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAlignment="inherit"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlueLink"
                    android:text="Poin: 10000 - 500000"/>

            <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:paddingRight="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_awards"
                    android:tint="@color/colorBlueLink"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/type_awards_area"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/shape_blue_link">
            <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAlignment="inherit"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlueLink"
                    android:text="Type: Voucher, Product"/>
            <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:paddingRight="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_awards"
                    android:tint="@color/colorBlueLink"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/clear"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/shape_blue_link">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAlignment="inherit"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlueLink"
                    android:text="Clear All Filter"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/area_seekbar"
            android:layout_below="@+id/area_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center |left"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_poin_needed"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="IDR 10.000"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlueLink"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="IDR 500.000"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlueLink"/>
        </LinearLayout>
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:max="100"
            android:progress="50"
            android:scrollbarStyle="insideOverlay"
            android:outlineSpotShadowColor="@color/colorBlueLink"
            android:outlineAmbientShadowColor="@color/colorBlueLink"
            android:thumbTint="@color/colorWhite"
            android:progressTint="@color/colorBlueLink"
            android:indeterminateTint="@color/colorBlueLink"
            android:tickMarkTint="@color/colorGrey"
            android:backgroundTint="@color/colorGrey"
            android:secondaryProgressTint="@color/colorGrey"
            android:progressBackgroundTintMode="screen"
            android:tickMarkTintMode="multiply"
            android:secondaryProgressTintMode="multiply"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/area_checkbox"
            android:layout_below="@+id/area_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center |left"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_awards_type"
                android:textSize="18sp"
                android:textStyle="bold"/>
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="All Type"
                android:textSize="14sp"
                android:textColor="@color/colorBlueLink"
                android:drawableTint="@color/colorBlueLink"
                android:buttonTint="@color/colorBlueLink"
                android:checked="true"
                android:textStyle="bold"/>
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vouchers"
                android:textSize="14sp"
                android:textColor="@color/colorBlueLink"
                android:drawableTint="@color/colorBlueLink"
                android:buttonTint="@color/colorBlueLink"
                android:checked="true"
                android:textStyle="bold"/>
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Products"
                android:textSize="14sp"
                android:textColor="@color/colorBlueLink"
                android:drawableTint="@color/colorBlueLink"
                android:buttonTint="@color/colorBlueLink"
                android:checked="true"
                android:textStyle="bold"/>
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Others"
                android:textSize="14sp"
                android:textColor="@color/colorBlueLink"
                android:drawableTint="@color/colorBlueLink"
                android:buttonTint="@color/colorBlueLink"
                android:checked="true"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/area_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp">
        <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/label_filter"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/colorBlueLink"
                android:background="@drawable/shape_button"/>
    </LinearLayout>
</RelativeLayout>